Added Bottom HUD

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Det var TEIT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Coming soon!</h1>
+    <div id="playArea">
+        <div id="animationArea">
+
+        </div>
+        <img src="assets/hud/bottom.png" alt="Bottom HUD for the buttons" id="bottomHUD">
+    </div>
 </body>
 </html>
