Fixed size and placement

--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="playArea">
-        <div id="animationArea">
-
-        </div>
-        <img src="assets/hud/bottom.png" alt="Bottom HUD for the buttons" id="bottomHUD">
-    </div>
+    <img src="assets/hud/startPic.png" alt="Bottom HUD for the buttons" id="playArea">
+    <video src="assets/animations/GHB.mp4" width="0%" id="GHBVid"></video>
+    <script src="script.js"></script>
 </body>
 </html>
