sizing problems fixed

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="game">
     <img src="assets/hud/startPic.png" alt="Bottom HUD for the buttons" id="playArea">
-    <video src="assets/animations/GHB.mp4" width="0%" id="GHBVid"></video>
+    <video src="assets/animations/GHB.mp4"  id="GHBVid"></video>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
