--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 <div id="game">
     <img src="assets/hud/startPic.png" alt="Bottom HUD for the buttons" id="playArea">
     <video src="assets/animations/GHB.mp4"  id="GHBVid"></video>
+<div id="icons">
+    <div>
+        <img src="assets/icons/Alchohol.png" class="ikoner" id="alchohol" alt="">
+        <img src="assets/icons/Cannabis.png" class="ikoner" id="Cannabis" alt="">
+    </div>
+    <div>
+        <img src="assets/icons/cocain.png" class="ikoner" id="cocain" alt="">
+        <img src="assets/icons/Ecstasy.png" class="ikoner" id="Ecstasy" alt="">
+    </div>
+    <div>
+        <img src="assets/icons/GHB.png" class="ikoner"  id="GHBIkon" alt="">
+        <img src="assets/icons/LSD.png" class="ikoner" id="LSD" alt="">
+    </div>
 </div>
+
     <script src="script.js"></script>
 </body>
 </html>
