--- a/index.html
+++ b/index.html
@@ -7,24 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="game">
-    <img src="assets/hud/startPic.png" alt="Bottom HUD for the buttons" id="playArea">
-    <video src="assets/animations/GHB.mp4"  id="GHBVid"></video>
-<div id="icons">
-    <div>
-        <img src="assets/icons/Alchohol.png" class="ikoner" id="alchohol" alt="">
-        <img src="assets/icons/Cannabis.png" class="ikoner" id="Cannabis" alt="">
+<div id="fullGame">
+    <div id="game">
+        <img src="assets/hud/startPic.png" alt="Bottom HUD for the buttons" id="playArea">
+        <video src="assets/animations/GHB.mp4"  id="GHBVid"></video>
     </div>
-    <div>
-        <img src="assets/icons/cocain.png" class="ikoner" id="cocain" alt="">
-        <img src="assets/icons/Ecstasy.png" class="ikoner" id="Ecstasy" alt="">
-    </div>
-    <div>
-        <img src="assets/icons/GHB.png" class="ikoner"  id="GHBIkon" alt="">
-        <img src="assets/icons/LSD.png" class="ikoner" id="LSD" alt="">
+    <div id="icons">
+        <img src="assets/icons/Alchohol.png" id="alchohol" alt="">
+        <img src="assets/icons/Cannabis.png" id="Cannabis" alt="">
+        <img src="assets/icons/cocain.png" id="cocain" alt="">
+        <img src="assets/icons/Ecstasy.png" id="Ecstasy" alt="">
+        <img src="assets/icons/GHB.png" id="GHBIkon" alt="">
+        <img src="assets/icons/LSD.png" id="LSD" alt="">
     </div>
 </div>
-
     <script src="script.js"></script>
 </body>
 </html>
