--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="fullGame">
-    <div id="game">
-        <img src="assets/hud/startPic.png" alt="Bottom HUD for the buttons" id="playArea">
-        <video src="assets/animations/GHB.mp4"  id="GHBVid"></video>
-    </div>
-    <div id="icons">
-        <img src="assets/icons/Alchohol.png" id="alchohol" alt="">
-        <img src="assets/icons/Cannabis.png" id="Cannabis" alt="">
-        <img src="assets/icons/cocain.png" id="cocain" alt="">
-        <img src="assets/icons/Ecstasy.png" id="Ecstasy" alt="">
-        <img src="assets/icons/GHB.png" id="GHBIkon" alt="">
-        <img src="assets/icons/LSD.png" id="LSD" alt="">
-    </div>
-</div>
+    <main>
+        <div id="fullGame">
+            <div id="game">
+                <img src="assets/hud/startPic.png" alt="Bottom HUD for the buttons" id="playArea">
+                <video src="assets/animations/GHB.mp4"  id="GHBVid"></video>
+            </div>
+            <div id="icons">
+                <img src="assets/icons/Alchohol.png" id="alchohol" alt="">
+                <img src="assets/icons/Cannabis.png" id="Cannabis" alt="">
+                <img src="assets/icons/cocain.png" id="cocain" alt="">
+                <img src="assets/icons/Ecstasy.png" id="Ecstasy" alt="">
+                <img src="assets/icons/GHB.png" id="GHBIkon" alt="">
+                <img src="assets/icons/LSD.png" id="LSD" alt="">
+            </div>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
