--- a/index.html
+++ b/index.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Det var TEIT</title>
+    <title>Det var teit</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <div id="fullGame">
-            <div id="game">
-                <img src="assets/hud/startPic.png" alt="Bottom HUD for the buttons" id="playArea">
-                <video src="assets/animations/GHB.mp4"  id="GHBVid"></video>
-            </div>
-            <div id="icons">
-                <img src="assets/icons/Alchohol.png" id="alchohol" alt="">
-                <img src="assets/icons/Cannabis.png" id="Cannabis" alt="">
-                <img src="assets/icons/cocain.png" id="cocain" alt="">
-                <img src="assets/icons/Ecstasy.png" id="Ecstasy" alt="">
-                <img src="assets/icons/GHB.png" id="GHBIkon" alt="">
-                <img src="assets/icons/LSD.png" id="LSD" alt="">
-            </div>
-        </div>
-    </main>
-    <script src="script.js"></script>
+    <div id="startScrn">
+        <button id="play">PLAY</button>
+        <video src="assets/animations/startAnimation.mp4" id="StartVid"></video>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
