--- a/game.html
+++ b/game.html
@@ -34,6 +34,10 @@
                 <img src="assets/icons/GHB.png" class="iconItem" id="GHBIkon" alt="">
                 <img src="assets/icons/LSD.png" class="iconItem" id="LSD" alt="">
             </div>
+            <article id="textBox2">
+                <h1 id="navn2">Det Var Teit</h1>
+                <p id="info2">Rusmidler er ulike substanser som kan påvirke sanseopplevelsene, stemningsleiet og utløse følelse av rus. Rus kan beskrives som en tilstand av eufori og velvære.</p>
+            </article>
         </div>
     </main>
     <script src="script.js"></script>
